// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render Chinese characters correctly 1`] = `
<button
  class="true-button true-button--md"
  type="button"
>
  <span>
    添加
  </span>
</button>
`;

exports[`Button should render autoFocus button correctly 1`] = `
<Button
  autoFocus={true}
  size="md"
>
  <button
    className="true-button true-button--md"
    type="button"
  >
    <span>
      OK
    </span>
  </button>
</Button>
`;

exports[`Button should render correctly 1`] = `
<button
  class="true-button true-button--md"
  type="button"
>
  <span>
    OK
  </span>
</button>
`;

exports[`Button should render icon correctly 1`] = `
<button
  class="true-button true-button--md"
  type="button"
>
  <div>
    <i
      class="true-icon true-icon__add"
    />
    <span>
      添加
    </span>
  </div>
</button>
`;

exports[`Button should render icon correctly 2`] = `
<button
  class="true-button true-button--md"
  type="button"
>
  <span>
    <i
      class="true-icon true-icon__add"
    />
    添加
  </span>
</button>
`;
